fix: set fixed height for product images on mobile view

--- a/src/modules/products/ui/product-details/product-details.module.scss
+++ b/src/modules/products/ui/product-details/product-details.module.scss
@@ -19,7 +19,7 @@
 
   @media (max-width: 768px) {
     width: 100%;
-    height: auto;
+    height: 500px;
   }
 }
 
